--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "^38.0.9",
     "expo-font": "^8.2.2",
     "expo-status-bar": "^1.0.2",
+    "numbro": "^2.3.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
@@ -27,7 +28,8 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
-    "react-navigation-tabs": "^2.9.0"
+    "react-navigation-tabs": "^2.9.0",
+    "react-number-format": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
